Conclusao do projeto

--- a/__Apoio/urna/index.html
+++ b/__Apoio/urna/index.html
@@ -2,12 +2,9 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Urna Eletrtônica</title>
-
-    <link rel="stylesheet" href="style.css">
-
+    <title>Urna Eletrônica</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="urna">
@@ -32,17 +29,17 @@
                 </div>
                 <div class="d-1-right">
                     <div class="d-1-image">
-                        <img src="image/candidato01.jpg" alt="">
+                        <img src="images/84.jpg" alt="" />
                         Prefeito
                     </div>
                     <div class="d-1-image small">
-                        <img src="image/vice01.jpg" alt="">
-                        Vice-prefeito
+                        <img src="images/84_2.jpg" alt="" />
+                        Vice-Prefeito
                     </div>
                 </div>
             </div>
             <div class="d-2">
-                Aperte a tecla:<br/>
+                Aperte a tela:<br/>
                 CONFIRMA para CONFIRMAR este voto<br/>
                 CORRIGE para REINICIAR este voto
             </div>
@@ -54,20 +51,20 @@
                 <div class="teclado--botao" onclick="clicou('3')">3</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao"  onclick="clicou('4')">4</div>
-                <div class="teclado--botao"  onclick="clicou('5')">5</div>
-                <div class="teclado--botao"  onclick="clicou('6')">6</div>
+                <div class="teclado--botao" onclick="clicou('4')">4</div>
+                <div class="teclado--botao" onclick="clicou('5')">5</div>
+                <div class="teclado--botao" onclick="clicou('6')">6</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao"  onclick="clicou('7')">7</div>
-                <div class="teclado--botao"  onclick="clicou('8')">8</div>
-                <div class="teclado--botao"  onclick="clicou('9')">9</div>
+                <div class="teclado--botao" onclick="clicou('7')">7</div>
+                <div class="teclado--botao" onclick="clicou('8')">8</div>
+                <div class="teclado--botao" onclick="clicou('9')">9</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao"  onclick="clicou('0')">0</div>
+                <div class="teclado--botao" onclick="clicou('0')">0</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao botao--branco"  onclick="branco()">BRANCO</div>
+                <div class="teclado--botao botao--branco" onclick="branco()">BRANCO</div>
                 <div class="teclado--botao botao--corrige" onclick="corrige()">CORRIGE</div>
                 <div class="teclado--botao botao--confirma" onclick="confirma()">CONFIRMA</div>
             </div>
